@@ -113,6 +113,7 @@ print 'log'
 testit('log(1/e)', math.log(1/math.e), -1)
 testit('log(1)', math.log(1), 0)
 testit('log(e)', math.log(math.e), 1)
+testit('log(32,2)', math.log(32,2), 5)
 
 print 'log10'
 testit('log10(0.1)', math.log10(0.1), -1)
