@@ -564,6 +564,8 @@ Library
 
 - Added conversion functions math.degrees() and math.radians().
 
+- math.log() now takes an optional argument:  math.log(x[, base]).
+
 - ftplib.retrlines() now tests for callback is None rather than testing
   for False.  Was causing an error when given a callback object which
   was callable but also returned len() as zero.  The change may
